# arcdev-hackathon

./: .gitignore  .gitmodules  readme.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs  state.rs
backend/src/auth/: login.rs  mod.rs  register.rs
backend/src/circle/: circle_client.rs  mod.rs
