[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum="0.8.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1.8", features = ["v4"] }
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
rand_core = "0.9.3"
reqwest = { version = "0.12", features = ["json"] }
